<resources>
    <string name="app_name">"OpenKeychain"</string>
    <string name="title_encrypt_text">"Encrypt"</string>
    <string name="title_encrypt_files">"Encrypt"</string>
    <string name="title_decrypt">"Decrypt"</string>
    <string name="title_add_subkey">"Add subkey"</string>
    <string name="title_change_master_key">Change master key</string>
    <string name="title_edit_key">"Edit Key"</string>
    <string name="title_linked_create">"Create a Linked Identity"</string>
    <string name="title_preferences">"Settings"</string>
    <string name="title_api_registered_apps">"Apps"</string>
    <string name="title_key_server_preference">"OpenPGP keyservers"</string>
    <string name="title_smartpgp_authorities_preference">"SmartPGP: Trusted authorities"</string>
    <string name="title_change_passphrase">"Change Password"</string>
    <string name="title_share_fingerprint_with">"Share fingerprint with…"</string>
    <string name="title_share_key">"Share key with…"</string>
    <string name="title_share_file">"Share file with…"</string>
    <string name="title_share_message">"Share text with…"</string>
    <string name="title_encrypt_to_file">"Encrypt To File"</string>
    <string name="title_decrypt_to_file">"Decrypt To File"</string>
    <string name="title_import_keys">"Import Keys"</string>
    <string name="title_export_key">"Backup Key"</string>
    <string name="title_export_keys">"Backup Keys"</string>
    <string name="title_key_not_found">"Key Not Found"</string>
    <string name="title_send_key">"Upload to Keyserver"</string>
    <string name="title_backup">"Backup Key"</string>
    <string name="title_certify_key">"Confirm Key"</string>
    <string name="title_key_details">"Key Details"</string>
    <string name="title_help">"Help"</string>
    <string name="title_log_display">"Log"</string>
    <string name="title_exchange_keys">"Exchange Keys"</string>
    <string name="title_advanced_key_info">"Advanced"</string>
    <string name="title_delete_secret_key">"Delete YOUR key '%s'?"</string>
    <string name="title_manage_my_keys">"Manage my keys"</string>
    <string name="title_alert_strip">"Strip this subkey"</string>
    <string name="section_user_ids">"Identities"</string>
    <string name="section_security_token">"Security Token"</string>
    <string name="section_linked_system_contact">"Linked System Contact"</string>
    <string name="section_keybase_proofs">"Keybase.io Proofs"</string>
    <string name="section_should_you_trust">"Should you trust this key?"</string>
    <string name="section_proof_details">Proof verification</string>
    <string name="section_keys">"Subkeys"</string>
    <string name="section_cloud_search">"Key Search"</string>
    <string name="section_cloud_search_summary">"Keyserver, keybase.io"</string>
    <string name="section_passphrase_cache">"Passwords and PINs"</string>
    <string name="section_passphrase_cache_summary">"Handling"</string>
    <string name="section_proxy_settings">"Network Anonymity"</string>
    <string name="section_proxy_settings_summary">"Tor, Proxy Settings"</string>
    <string name="section_gui">"Interface"</string>
    <string name="section_sync_settings">"Synchronization"</string>
    <string name="section_sync_settings_summary">"Automatic key updates, contact linking"</string>
    <string name="section_experimental_features">"Experimental Features"</string>
    <string name="section_certify">"Confirm"</string>
    <string name="section_actions">"Actions"</string>
    <string name="section_share_key">"Key"</string>
    <string name="section_key_server">"Keyserver"</string>
    <string name="section_fingerprint">"Fingerprint"</string>
    <string name="section_encrypt">"Encrypt"</string>
    <string name="section_decrypt">"Decrypt/Verify"</string>
    <string name="section_current_expiry">"Current expiry"</string>
    <string name="section_new_expiry">"New expiry"</string>
    <string name="btn_decrypt_verify_file">"Decrypt, verify, and save file"</string>
    <string name="btn_encrypt_share_file">"Encrypt and share file"</string>
    <string name="btn_encrypt_save_file">"Encrypt and save file"</string>
    <string name="btn_save_file">"Save file"</string>
    <string name="btn_save">"Save"</string>
    <string name="btn_view_log">"View log"</string>
    <string name="btn_do_not_save">"Cancel"</string>
    <string name="btn_delete">"Delete"</string>
    <string name="btn_no_date">"No Expiry"</string>
    <string name="btn_okay">"Okay"</string>
    <string name="btn_export_to_server">"Upload To Keyserver"</string>
    <string name="btn_next">"Next"</string>
    <string name="btn_back">"Back"</string>
    <string name="btn_no">"No"</string>
    <string name="btn_match">"Fingerprints match"</string>
    <string name="btn_share_encrypted_signed">"Encrypt/sign and share text"</string>
    <string name="btn_copy_encrypted_signed">"Encrypt/sign and copy text"</string>
    <string name="btn_paste_encrypted_signed">"Encrypt/sign and paste text"</string>
    <string name="btn_view_cert_key">"View certification key"</string>
    <string name="btn_create_key">"Create key"</string>
    <string name="btn_add_files">"Add file(s)"</string>
    <string name="btn_share_decrypted_text">"Share"</string>
    <string name="btn_open_with">"Open with…"</string>
    <string name="btn_copy_decrypted_text">"Copy to clipboard"</string>
    <string name="btn_decrypt_clipboard">"Read from clipboard"</string>
    <string name="btn_decrypt_files">"Select input file"</string>
    <string name="btn_encrypt_files">"Encrypt files"</string>
    <string name="btn_encrypt_text">"Encrypt text"</string>
    <string name="btn_add_email">"Add additional email address"</string>
    <string name="btn_unlock">"Unlock"</string>
    <string name="btn_proceed">"Proceed"</string>
    <string name="btn_add_keyserver">"Add"</string>
    <string name="btn_save_default">"Save as default"</string>
    <string name="btn_saved">"Saved!"</string>
    <string name="btn_not_matching">"Not matching"</string>
    <string name="shortcut_debug">Debug Actions</string>
    <string name="cd_encrypt_files">"Encrypt files"</string>
    <string name="cd_exchange_keys">"Exchange keys"</string>
    <string name="cd_encrypt_text">"Encrypt text"</string>
    <string name="cd_share_nfc">"Share via NFC"</string>
    <string name="menu_preferences">"Settings"</string>
    <string name="menu_help">"Help"</string>
    <string name="menu_export_key">"Backup key"</string>
    <string name="menu_delete_key">"Delete key"</string>
    <string name="menu_status">"View key status"</string>
    <string name="menu_manage_keys">"Manage my keys"</string>
    <string name="menu_search">"Search"</string>
    <string name="menu_open">"Open"</string>
    <string name="menu_read_clipboard">"Read from clipboard"</string>
    <string name="menu_nfc_preferences">"NFC settings"</string>
    <string name="menu_beam_preferences">"Beam settings"</string>
    <string name="menu_encrypt_to">"Encrypt to…"</string>
    <string name="menu_select_all">"Select all"</string>
    <string name="menu_export_all_keys">"Export all keys"</string>
    <string name="menu_update_all_keys">"Update all keys"</string>
    <string name="menu_certify_fingerprint">"Confirm with fingerprint"</string>
    <string name="menu_certify_fingerprint_phrases">"Confirm with phrases"</string>
    <string name="menu_share_log">"Share log"</string>
    <string name="menu_change_password">"Change password"</string>
    <string name="menu_advanced">"Advanced"</string>
    <string name="menu_keyserver_add">"Add"</string>
    <string name="label_message">"Text"</string>
    <string name="label_file">"File"</string>
    <string name="label_files">"File(s)"</string>
    <string name="label_file_colon">"File:"</string>
    <string name="label_no_passphrase">"No Password"</string>
    <string name="label_passphrase">"Password"</string>
    <string name="label_pin">"PIN"</string>
    <string name="label_unlock">"Unlocking…"</string>
    <string name="label_passphrase_again">"Repeat Password"</string>
    <string name="label_show_passphrase">"Show Password"</string>
    <string name="label_algorithm">"Algorithm"</string>
    <string name="label_algorithm_colon">"Algorithm:"</string>
    <string name="label_ascii_armor">"File ASCII Armor"</string>
    <string name="label_file_ascii_armor">"Enable ASCII Armor"</string>
    <string name="label_write_version_header">"Let others know that you're using OpenKeychain"</string>
    <string name="label_write_version_header_summary">"Writes 'OpenKeychain v2.7' to OpenPGP signatures, ciphertext, and exported keys"</string>
    <string name="label_asymmetric_from">"Sign with:"</string>
    <string name="label_to">"Encrypt to"</string>
    <string name="label_delete_after_encryption">"Delete files after encryption"</string>
    <string name="label_delete_after_decryption">"Delete after decryption"</string>
    <string name="label_encryption_algorithm">"Encryption algorithm"</string>
    <string name="label_hash_algorithm">"Hash algorithm"</string>
    <string name="label_symmetric">"Encrypt with password"</string>
    <string name="label_passphrase_cache_subs">"Remember passwords by subkey"</string>
    <string name="label_message_compression">"Text compression"</string>
    <string name="label_file_compression">"File compression"</string>
    <string name="label_keyservers">"Manage OpenPGP keyservers"</string>
    <string name="label_key_id">"Key ID"</string>
    <string name="label_key_id_colon">"Key ID:"</string>
    <string name="label_key_type">"Type"</string>
    <string name="label_expiry">"Expiry"</string>
    <string name="label_usage">"Usage"</string>
    <string name="label_name">"Name"</string>
    <string name="label_email">"Email"</string>
    <string name="label_enable_compression">"Enable compression"</string>
    <string name="label_enable_self_encrypt">"Encrypt to signer"</string>
    <string name="label_encrypt_filenames">"Encrypt filenames"</string>
    <string name="label_hidden_recipients">"Hide recipients"</string>
    <string name="label_theme">"Theme"</string>
    <string name="label_experimental_settings_desc_title">"Warning"</string>
    <string name="label_experimental_settings_desc_summary">"These features are not yet finished or results of user experience/security research. Thus, don't rely on their security and please don't report issues you encounter!"</string>
    <string name="label_experimental_settings_linked_identities_title">"Linked Identities"</string>
    <string name="label_experimental_settings_linked_identities_summary">"Link keys to Twitter, GitHub, websites or DNS (similar to keybase.io but decentralized)"</string>
    <string name="label_experimental_settings_keybase_title">"Keybase.io proofs"</string>
    <string name="label_experimental_settings_keybase_summary">"Contact keybase.io for key proofs and show them every time a key is displayed"</string>
    <string name="usage_none">"None (subkey binding only)"</string>
    <string name="usage_sign">"Sign"</string>
    <string name="usage_encrypt">"Encrypt"</string>
    <string name="usage_sign_and_encrypt">"Sign &amp; Encrypt"</string>
    <string name="key_view_action_edit">"Edit"</string>
    <string name="key_view_action_update">"Update from keyserver"</string>
    <string name="create_key_upload">"Publish on keyservers"</string>
    <string name="create_key_passphrase_text">"Choose a strong password. It protects your key when your device gets stolen."</string>
    <string name="first_time_create_key">"Create my key"</string>
    <string name="menu_linked_add_identity">"Link to Account"</string>
    <string name="usage_authentication">Authentication</string>
    <string name="token_hint_admin_pin">Admin PIN</string>
    <string name="token_hint_new_pin">New PIN</string>
    <string name="token_hint_new_pin_repeat">New PIN (repeat)</string>
</resources>