<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<header-->
        <!--android:fragment="org.sufficientlysecure.keychain.ui.SettingsActivity$GuiPrefsFragment"-->
        <!--android:title="@string/section_gui" />-->
    <header
        android:fragment="org.sufficientlysecure.keychain.ui.SettingsActivity$CloudSearchPrefsFragment"
        android:title="@string/section_cloud_search" />
    <header
        android:fragment="org.sufficientlysecure.keychain.ui.SettingsActivity$PassphrasePrefsFragment"
        android:title="@string/section_passphrase_cache" />
    <header
        android:fragment="org.sufficientlysecure.keychain.ui.SettingsActivity$ProxyPrefsFragment"
        android:title="@string/section_proxy_settings" />
    <header
        android:fragment="org.sufficientlysecure.keychain.ui.SettingsActivity$SyncPrefsFragment"
        android:title="@string/section_sync_settings" />
    <header
        android:fragment="org.sufficientlysecure.keychain.ui.SettingsActivity$ExperimentalPrefsFragment"
        android:title="@string/section_experimental_features" />
</preference-headers>
