<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_key_list_multi_encrypt"
        android:icon="@drawable/ic_lock_white_24dp"
        android:title="@string/menu_encrypt_to" />

    <item
        android:id="@+id/menu_key_list_multi_export"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"
        android:title="@string/menu_export_key" />

    <item
        android:id="@+id/menu_key_list_multi_delete"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"
        android:title="@string/menu_delete_key" />

    <item
        android:id="@+id/menu_key_list_multi_select_all"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"
        android:title="@string/menu_select_all" />

</menu>
