<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <CheckBox
        android:id="@+id/passphrase_no_passphrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_no_passphrase" />

    <EditText
        android:id="@+id/passphrase_passphrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:hint="@string/label_passphrase"
        android:ems="10"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/passphrase_passphrase_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:hint="@string/label_passphrase_again"
        android:ems="10"
        android:layout_gravity="center_horizontal" />

</LinearLayout>