<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:text="@string/create_key_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:hint="@string/label_name"
            android:ems="10"
            android:id="@+id/name" />

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:imeOptions="actionNext"
            android:hint="@string/label_email"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:inputType="textPassword"
            android:hint="@string/label_passphrase"
            android:ems="10"
            android:id="@+id/passphrase"
            android:layout_gravity="center_horizontal" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/create_key_upload"
            android:id="@+id/create_key_upload" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/create_key_button"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/first_time_create_key"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:drawableRight="@drawable/ic_action_new_account"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:clickable="true"
            style="@style/SelectableItem" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="?android:attr/listDivider" />

    </LinearLayout>
</ScrollView>